--- a/modules/asn1.html
+++ b/modules/asn1.html
@@ -332,15 +332,7 @@
     <ol>
 
            <span class="types"><span class="type">integer</span></span>
-        nid
-    </ol>
-     <h3>Or</h3>
-    <ol>
-
-           <span class="types"><span class="type">nil</span></span>
-
-
-
+        nid or nil on fail
     </ol>
 
 
